<resources>
    <string name="app_name">Journey Church</string>
    <string name="quintini_bio">Pastor Jeremy Quintini leads Elevate Student Ministries at Journey Church. Although raised in church, Jeremy gave his heart to the Lord at a worship service when he was 17 years old. Soon after he felt a strong calling to ministry and made plans to enroll in Bible College at Christ for the Nations Institute in Dallas, Texas. Upon graduation, Jeremy moved to Vanuatu, a primitive nation in the South Pacific to serve on the mission field. It was a year that challenged his faith, molded his character and inspired him to believe God for great things. Jeremy returned to America and continued his education. He earned a Bachelor’s degree from Dallas Baptist University in Communications and soon after married his high school sweetheart, Taylor. \r\n \r\n \r\nThe heartbeat of our mission at Elevate Student Ministries is to challenge students to have a personal relationship with Jesus and live their lives radically for Him.\r\n \r\n \r\n Jeremy.q@takethejourney.tv</string>
    <string name="sullivan_bio">Kelly Sullivan is the Children’s Pastor at Journey Church. For several years, Kelly has served in many aspects of the church, simply wanting to be the hands and feet of Jesus. Prior to being called to full time ministry, Kelly and Kacie, served alongside one another as leaders in the JKidz ministry at Journey Church. In 2011, Kelly and Kacie took their first missions trip to Nicaragua and have since shared a strong desire to see that the Good News of our Lord and Savior, Jesus Christ, be made known not just locally, but to unreached nations and people groups.\r\n \r\n \r\nKelly’s heart in ministry is to see an age appropriate environment where children can CONNECT with Jesus in a life giving relationship, learn to GROW through discipleship to become the mature believer that God intends for them to be and to be a demonstration of God’s love by SERVING those around them.\r\n \r\n \r\n Kelly.s@takethejourney.tv</string>
    <string name="coleman_bio">Jay and Stacey Coleman are the lead pastors of Journey Church. Pastor Jay and Stacey, have been pastoring for over 20 years and have served in several aspects of the church – ministering to children and youth as well as to singles and seniors. In 2002, after serving for 8 years as associate pastors in Lafayette, Louisiana they accepted the position as senior pastors of Journey in the City of Central. Journey Church was relocated to its current home on Greenwell Springs Road in 2008. “The Big Day in May” was planned as the grand opening event for the new location and over 500 gathered to the new facility. Since then thousands have been saved under the ministry at Journey and the Journey Church family has greatly grown. \r\n \r\n \r\nPastor Jay’s passion is for people to connect to Christ, grow their faith and serve others around them. It is through this vision that Connect.Grow.Serve was born and is the lifeblood of the members of Journey Church.</string>
    <string name="core_body_7"><b><i>Compassion</i></b> – Matthew 9:36 shows that Jesus saw people and was moved with compassion for them, and we want to have that same compassion and love for others. We seek to extend the grace and mercy of God to those both near and far.</string>
    <string name="core_body_6"><b><i>Evangelism</i></b> – John 3:16 clearly tells us that God loves people sacrificially. God’s heart is to reach those that don’t know Him. We are passionate about doing the same.</string>
    <string name="core_body_5"><b><i>Leadership</i></b>– The Bible says in 2 Timothy 2:2 that we are to teach and train others who will, in turn, train others. God has given each and every believer gifts and talents and calls us to impart into others.</string>
    <string name="core_body_4"><b><i>Spiritual Family</i></b> – The Bible makes it clear that God builds through family, both natural and spiritual. God has called all believers to be a part of a healthy spiritual family.</string>
    <string name="core_body_3"><b><i>Discipleship</i></b> – God has called every believer in Matthew 28:19-20 to make disciples. Hence, one of our primary focuses at Journey Church is to help people build their lives, both spiritually and relationally.</string>
    <string name="core_body_2"><b><i>Prayer</i></b> – Prayer is our direct connection to God. Our communication with God is vital to our spiritual growth and survival. (Philippians 4:6)</string>
    <string name="core_body_1"><b><i>Lordship</i></b> – The Bible says in Revelation 19:16 that Jesus is “King of kings and Lord of lords.” We believe that wholehearted submission to His will is the starting point of the Christian faith and the foundation of all spiritual growth.</string>
    <string name="believe_body_4"><b><i>The Holy Spirit draws people to Christ</i></b> and indwells the believer to live an overcoming and victorious Christian life. We believe in and depend on the power of the Holy Spirit to meet our need, in every area of life. We believe in the present day gifts of the Holy Spirit that empower Christians to live the life God intends for them. (Romans 15:13)</string>
    <string name="believe_body_3"><b><i>Jesus Christ, the second Person of the Trinity,</i></b> lived a sinless life on earth and voluntarily paid for our sin by dying on the cross as our substitute. This accomplished salvation for all who receive grace by trusting in Him alone. He rose from the dead and is the only mediator between God and us. He baptizes believers in the Holy Spirit. He will return to earth to consummate history. (2 Corinthians 5:21)</string>
    <string name="believe_body_2"><b><i>God created humans to have fellowship with Him,</i></b> but they defied God by sinfully going their own way. As a result, we need God’s saving grace to end our alienation from Him. Salvation comes only through God’s grace – not human effort – and must be received personally by repentance and faith. (Genesis 1:26,27; 3:1-15)</string>
    <string name="believe_body_1"><b><i>The sole basis for our beliefs is the Bible,</i></b> which is uniquely God-inspired, without error, and the final authority on all matters on which it speaks. As the Bible teaches, there is one God, eternally existing in three persons – Father, Son and Holy Spirit – each possessing all the attributes of deity. (2 Timothy 3:16)</string>
    <string name="our_story">Journey was founded in 1994 with a desire to reach the lost and hurting people of the world. After years of growth, the decision was made to purchase property on Greenwell Springs Road to construct new facilities. In May of 2008 our first official service was held and new families flowed through the doors to experience a life-giving and relevant worship experience. Since that time our vision to be the hands and feet of Jesus to a hurting world has enabled us to see thousands of transformed lives and families. At Journey, our passion is to reach out to the non-churched community and help them connect to the life-giving message of the Gospel. God is at work at Journey Church and if you haven’t visited we invite you to see for yourself. At Journey the focus is simple and people are free to go after God with a passion.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="grow_body">Grow is a basic discipleship class which will help you understand how to study the bible, pray effectively and grow closer in your walk with Christ.</string>
    <string name="serve_body">Serve will help you to realize the gifting’s God has placed within your life and utilize them to be the hands and feet of Jesus in the community.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
