<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lsukev.journeychurch.fragments.BelieveFragment">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:id="@+id/ourStoryImage"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ourstory_banner" />
        <TextView
            android:id="@+id/lblBelieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ourStoryImage"
            android:layout_alignLeft="@id/ourStoryImage"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:text="// WHAT WE"
            android:textColor="@color/colorJourneyBlue"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lblBelieve"
            android:layout_alignTop="@id/lblBelieve"
            android:layout_marginLeft="6dp"
            android:text="BELIEVE"
            android:textStyle="bold"
            android:textColor="@color/colorJourneyBlue"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/lblBelieveBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblBelieve"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/believe_body_1"
            android:textSize="16sp"
            android:textIsSelectable="false" />
        <TextView
            android:id="@+id/lblBelieveBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblBelieveBody"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/believe_body_2"
            android:textIsSelectable="false" />
        <TextView
            android:id="@+id/lblBelieveBody3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblBelieveBody2"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@id/lblBelieve"
            android:text="@string/believe_body_3"
            android:textSize="16sp"
            android:textIsSelectable="false" />
        <TextView
            android:id="@+id/lblBelieveBody4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblBelieveBody3"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/believe_body_4"
            android:textIsSelectable="false" />
        <TextView
            android:id="@+id/lblCoreValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblBelieveBody4"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@id/lblBelieve"
            android:textSize="22sp"
            android:text="// OUR CORE"
            android:textColor="@color/colorJourneyBlue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lblCoreValues"
            android:layout_alignTop="@id/lblCoreValues"
            android:text="VALUES"
            android:textStyle="bold"
            android:layout_marginLeft="6dp"
            android:textSize="22sp"
            android:textColor="@color/colorJourneyBlue"/>
        <TextView
            android:id="@+id/lblCoreBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:layout_below="@id/lblCoreValues"
            android:layout_alignLeft="@id/lblBelieve"
            android:text="@string/core_body_1"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/lblCoreBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblCoreBody1"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@id/lblBelieve"
            android:text="@string/core_body_2"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/lblCoreBody3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblCoreBody2"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/core_body_3"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/lblCoreBody4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblCoreBody3"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/core_body_4"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/lblCoreBody5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblCoreBody4"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/core_body_5"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/lblCoreBody6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblCoreBody5"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/core_body_6"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/lblCore7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblCoreBody6"
            android:layout_alignLeft="@id/lblBelieve"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/core_body_7"
            android:textSize="16sp"/>
    </RelativeLayout>
</ScrollView>

</FrameLayout>
